k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: scoopp-backend
  namespace: scoopp
  labels:
    app: scoopp
    component: backend
spec:
  type: ClusterIP
  ports:
    - port: 11235
      targetPort: 11235
      protocol: TCP
      name: http
  selector:
    app: scoopp
    component: backend
