k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: scoopp-frontend
  namespace: scoopp
  labels:
    app: scoopp
    component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: scoopp
    component: frontend
